--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body {
   padding: 15px;
   font-size: 14px;
   color: rgba(255, 255, 255, .4);
+  border-left: 4px solid transparent;
 }
 
 .menu .menu-items .item:hover {
@@ -128,6 +129,7 @@ body {
 }
 .menu .menu-items .item.active{
   color: #2d8383;
+  border-left-color: #2d8383; 
 }
 
 .menu .menu-items .item a:hover {
