--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body {
 
 .nav-bar {
   z-index: 100;
+  width: 100%;
+  position: fixed;
+  top: 0;
   display: flex;
   background-color: #fff;
   box-shadow: 0 2px rgba(0, 0, 0, .1);
@@ -63,7 +66,9 @@ body {
 /* Menu styles */
 
 .menu {
-  float: left;
+  position: fixed;
+  left: 0;
+  top: 60px;
   width: 240px;
   height: calc(100vh - 60px);
   background-color: #2c2d32;
@@ -147,10 +152,9 @@ body {
 }
 
 .content {
-  height: calc(100vh - 82px);
   padding: 10px;
-  overflow-y: scroll;
-  margin-top: 2px;
+  padding-top: 70px;
+  padding-left: 250px;
 }
 
 .status {
@@ -253,4 +257,14 @@ table tr td {
   padding-left: 8px;
   padding-right: 8px;
   margin: 0;
+}
+
+@media (max-width: 750px) {                  
+  .menu {
+     display: none;
+  }
+
+  .content {
+    padding-left: 10px;
+  }
 }
